getXpath.js调整xpath生成逻辑